Grid shift function fixed

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,6 @@ html, body {
 }
 
 canvas {
-	border: 1px solid #555;
+	border: 1px solid #ddd;
 	margin: 1em;
 }
